--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -77,7 +77,9 @@ a.btn-ghost:hover,
 	color: #1761a0;
 }
 
-.btn-ghost{
+.btn-ghost.btn-sm,
+a.btn-sm.btn-ghost:link,
+a.btn-sm.btn-ghost:visited,{
 	padding: 4px 16px;
 	font-size: 12px;
 }
